Don't check if our fallback is empty, bur rather the string itself. Otherwise we can end up with an empty string that causes crashes.

BUG:268876